--- a/.classpath
+++ b/.classpath
@@ -7,8 +7,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="lib" path="lib/jdatepicker-1.3.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/박나경/Downloads/mysql-connector-java-8.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/박나경/Downloads/LGoodDatePicker-11.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
